--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@
 body{
     background-color: black;
 }
+.rick{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+}
